updating-hero-caption

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <h1
                                 class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl">
                                 <span class="block xl:inline">Beautiful Pages to</span>
-                                <span class="block text-indigo-600 xl:inline" data-primary="indigo-600">Tell Your
+                                <span class="block text-indigo-600 xl:inline" data-primary="indigo-600">Tell A
                                     Story!</span>
                             </h1>
                             <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never
@@ -63,8 +63,6 @@
                 </div>
             </div>
         </section>
-
-
     </div>
 </body>
 
