--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="flex items-center justify-center w-full max-w-full">
         <section class="px-2 py-32 bg-white md:px-0">
             <div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
-                <div class="flex flex-wrap items-center sm:-mx-3">
+                <!-- <div class="flex flex-wrap items-center sm:-mx-3"> -->
                     <div class="w-full md:w-1/2 md:px-3">
                         <div
                             class="w-full pb-6 space-y-6 sm:max-w-md lg:max-w-lg md:space-y-4 lg:space-y-8 xl:space-y-9 sm:pr-5 lg:pr-0 md:pb-0">
