--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Pines UI</title>
-    <style>
+    <!-- <style>
         [x-cloak] {
             display: none
         }
-    </style>
+    </style> -->
     <!-- Include the Alpine library on your page -->
     <script src="https://unpkg.com/alpinejs" defer></script>
     <!-- Include the TailwindCSS library on your page -->
@@ -18,6 +19,24 @@
 </head>
 
 <body>
+    <div class="container-fluid" style="margin-op: 10px;">
+
+        <ul>
+            <li>
+                <a href="" id="home">Home</a>
+            </li>
+            <li>
+                <a href="" class="contact" style="margin-left: 250px;">Contact</a>
+            </li>
+            <li>
+                <a href="" class="about">About Us</a>
+            </li>
+            <button style="margin-left: 200px;">
+                <a href="" class="about">login</a>
+            </button>
+
+        </ul>
+    </div>
     <div class="flex items-center justify-center w-full max-w-full">
         <section class="px-2 py-32 bg-white md:px-0">
             <div class="container items-center max-w-6xl px-8 mx-auto xl:px-5">
@@ -28,7 +47,8 @@
                             <h1
                                 class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl">
                                 <span class="block xl:inline">Beautiful Pages to</span>
-                                <span class="block text-indigo-600 xl:inline" data-primary="indigo-600">Tell Your
+                                <span class="block text-indigo-600 xl:inline" data-primary="indigo-600"
+                                    id="heroCaption">Tell Your
                                     Story!</span>
                             </h1>
                             <p class="mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never
@@ -64,6 +84,7 @@
             </div>
         </section>
     </div>
+    <script src="./pine.js"></script>
 </body>
 
 </html>
